force-app/main/default/objects/Survey_Question__c/Survey_Question__c.object-meta.xml
<CustomObject>
    <label>Survey Question</label>
    <pluralLabel>Survey Questions</pluralLabel>
    <description>Authored survey questions presented on the Skywave consumer site during the survey stage. Questions and their options are editable in the skywaveSurveyAuthor LWC.</description>
    <nameField>
        <label>Question Number</label>
        <type>AutoNumber</type>
        <displayFormat>Q-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>