force-app/main/default/objects/Survey_Question__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Only active questions render on the consumer site. Lets you draft a future question without showing it tonight.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>