force-app/main/default/objects/Survey_Question__c/fields/Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Question_Key__c</fullName>
    <label>Question Key</label>
    <description>Stable identifier sent to the Interactions SDK and Apex relay (e.g. fav_destination). The consumer site keys answers by this value, not by the auto-number Name.</description>
    <type>Text</type>
    <length>64</length>
    <unique>true</unique>
    <externalId>true</externalId>
    <required>true</required>
</CustomField>