force-app/main/default/objects/Survey_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <description>The question as shown to the audience.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>