force-app/main/default/objects/Survey_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <description>Currently single_choice; multi_choice and text are roadmap items.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>single_choice</fullName>
                <default>true</default>
                <label>Single Choice</label>
            </value>
            <value>
                <fullName>multi_choice</fullName>
                <label>Multi Choice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>